--- a/etc/mpp-solar/mpp-solar.conf
+++ b/etc/mpp-solar/mpp-solar.conf
@@ -1,8 +1,8 @@
 [SETUP]
 # Number of seconds to pause between command execution loop
 # 0 is no pause, greater than 60 will cause service restarts
-pause=5
-mqtt_broker=192.168.0.100
+pause=30
+mqtt_broker=192.168.0.2
 mqtt_user=user
 mqtt_pass=pass
 
@@ -12,6 +12,31 @@ mqtt_pass=pass
 protocol=PI41
 port=/dev/hidraw0
 baud=2400
-command=QPGS0,QP2GS0
+command=QPGS0
 tag=LV5048
+outputs=hass_mqtt
+
+[Inverter2_LV5048]
+protocol=PI41
+port=/dev/hidraw0
+baud=2400
+command=QP2GS0
+tag=LV5048
+outputs=hass_mqtt
+
+[Inverter3_LV6048]
+protocol=PI41
+port=/dev/hidraw1
+baud=2400
+command=QPGS0
+tag=LV6048
+outputs=hass_mqtt
+
+
+[Inverter4_LV6048]
+protocol=PI41
+port=/dev/hidraw1
+baud=2400
+command=QP2GS0
+tag=LV6048
 outputs=hass_mqtt
